--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.7.0",
     "@astrojs/mdx": "^0.11.1",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/rss": "^1.0.1",
     "@astrojs/sitemap": "^1.0.0",
-    "astro": "^1.2.3"
+    "@astrojs/tailwind": "^1.0.1",
+    "astro": "^1.2.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.6.0"
+  },
+  "devDependencies": {
+    "rehype-add-classes": "^1.0.0"
   }
 }
